The editing on the webpage now affects the flicks array as well

--- a/app.css
+++ b/app.css
@@ -9,12 +9,12 @@ h1 {
     padding-left: 170px;
 
 }
-#up {
+.up {
     position: absolute;
     right: 950px;
 }
 
-#down {
+.down {
     position: absolute;
     right: 900px;
 }
